# mdict-ocr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  packages.config
MO/: app.cpp  app.h  capture.cpp  capture.h  console.cpp  console.h  image.cpp  image.h  ocr.cpp  ocr.h  ui.cpp  ui.h  util.cpp  util.h  window.cpp  window.h
include/: bridge.h  capture.h  ocr.h
src/: bridge.cpp  capture.cpp  main.cpp  ocr.cpp
